[gd_scene load_steps=22 format=3 uid="uid://cehk7cuewxedv"]

[ext_resource type="Script" path="res://scenes/main game scene/main.gd" id="1_3072i"]
[ext_resource type="PackedScene" uid="uid://bjxr0iep468t3" path="res://scenes/falling objects/new_asteroid.tscn" id="2_5md3b"]
[ext_resource type="PackedScene" uid="uid://5puo8nygq1b0" path="res://scenes/fuel/fuel_cannister.tscn" id="3_glgdl"]
[ext_resource type="PackedScene" uid="uid://8y53tsnr4yu7" path="res://scenes/health/wrench.tscn" id="4_htyl0"]
[ext_resource type="PackedScene" uid="uid://sbenj0qdg1bj" path="res://scenes/player scene/new/player.tscn" id="5_dlp2k"]
[ext_resource type="PackedScene" uid="uid://cu2fky2uwpfjd" path="res://scenes/end scene/end_scene.tscn" id="6_itygd"]
[ext_resource type="Texture2D" uid="uid://8aesgm71qg6l" path="res://sprites/HealthBG.png" id="7_wwit4"]
[ext_resource type="PackedScene" uid="uid://bdcsnat8226eu" path="res://scenes/game background parallax/background.tscn" id="8_s83b5"]
[ext_resource type="Texture2D" uid="uid://crifue1863v46" path="res://sprites/Health.png" id="8_ts6xn"]
[ext_resource type="Texture2D" uid="uid://bhey3csoe3sai" path="res://sprites/HealthFull.png" id="9_qp6d4"]
[ext_resource type="Theme" uid="uid://7fastx4ccd4k" path="res://main_theme.tres" id="10_o8iod"]
[ext_resource type="Texture2D" uid="uid://day465mhw51rw" path="res://sprites/HealthBGSmall.png" id="11_7r5ae"]
[ext_resource type="PackedScene" uid="uid://dttnoca6h8g41" path="res://scenes/pause_scene/pause_scene.tscn" id="11_dx34h"]
[ext_resource type="Texture2D" uid="uid://2jvhtkrj5gp4" path="res://sprites/HealthSmall.png" id="12_f03hg"]
[ext_resource type="PackedScene" uid="uid://dybnflwyw1dvs" path="res://scenes/victory/victory_screen.tscn" id="12_iggr2"]
[ext_resource type="Texture2D" uid="uid://bawrb5fuv5gkd" path="res://sprites/RedBarSmall.png" id="13_1fafh"]
[ext_resource type="AudioStream" uid="uid://eyhht1ggaqt" path="res://Bonus/fight.ogg" id="13_p2uwh"]
[ext_resource type="AudioStream" uid="uid://cctcv3ifduv6f" path="res://Sounds/Low Fuel 1.wav" id="18_036r0"]
[ext_resource type="AudioStream" uid="uid://bsm4tfodob0oo" path="res://Sounds/Pickup Wrench.wav" id="19_fk81j"]
[ext_resource type="AudioStream" uid="uid://d1uft6xtaotmm" path="res://Sounds/Fuel.wav" id="20_bi8ii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnm1o"]
size = Vector2(2816, 16)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_3072i")
falling_object_scene = ExtResource("2_5md3b")
fuel_collect_scene = ExtResource("3_glgdl")
health_collect_scene = ExtResource("4_htyl0")

[node name="DeleteObjectArea" type="Area2D" parent="." groups=["delete_object"]]
position = Vector2(640, 1832)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeleteObjectArea"]
position = Vector2(640, 0)
shape = SubResource("RectangleShape2D_qnm1o")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1280, 720)
zoom = Vector2(0.5, 0.5)

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="FuelTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, -16, 2568, -16, 2576, 1456, -16, 1456, -16, -16, 0, -16, 0, 1440, 2560, 1440, 2560, 0, 0, 0)

[node name="ParallaxBackground" parent="." instance=ExtResource("8_s83b5")]
bg_random_seed = true

[node name="Player" parent="." instance=ExtResource("5_dlp2k")]
position = Vector2(1280, 720)
mass = 0.2
gravity_scale = 0.15
rotation_speed = 2200

[node name="FallingObjectArea" type="Node2D" parent="."]
position = Vector2(1280, -96)

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="MainGUIContainer" type="GridContainer" parent="GUILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="GUILayer/MainGUIContainer/TopMarginContainer"]
layout_mode = 2
columns = 3

[node name="LeftMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/LeftMarginContainer"]
layout_mode = 2

[node name="HealthProgressBar" type="TextureProgressBar" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/LeftMarginContainer/GridContainer"]
layout_mode = 2
max_value = 20.0
value = 20.0
texture_under = ExtResource("7_wwit4")
texture_over = ExtResource("8_ts6xn")
texture_progress = ExtResource("9_qp6d4")

[node name="ShipHealthLabel" type="Label" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/LeftMarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("10_o8iod")
text = "SHIP HEALTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MidMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoFuelRichTextLabel" type="RichTextLabel" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/MidMarginContainer"]
visible = false
layout_mode = 2
theme = ExtResource("10_o8iod")
bbcode_enabled = true
text = "[center][img=100]res://sprites/Warning.png[/img]
NO FUEL LEFT![/center]"

[node name="NoFuelBlinkTimer" type="Timer" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/MidMarginContainer"]

[node name="RightMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/RightMarginContainer"]
layout_mode = 2

[node name="TimeSurvivedLabel" type="Label" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/RightMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("10_o8iod")
theme_override_font_sizes/font_size = 21
text = "TIME LEFT"
horizontal_alignment = 2

[node name="TimerLabel" type="Label" parent="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/RightMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("10_o8iod")
horizontal_alignment = 2

[node name="MidMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer"]
layout_mode = 2
columns = 3

[node name="LeftEmptyMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutsideGridContainer" type="GridContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
bbcode_enabled = true
text = "[center][img=100]res://sprites/Warning.png[/img][/center]"
fit_content = true

[node name="Label" type="Label" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("10_o8iod")
text = "RETURN TO THE PLANNED ROUTE"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("10_o8iod")
text = "5"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer/MarginContainer/CenterContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer/MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "FUEL:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FuelProgressBar" type="TextureProgressBar" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer/CenterMarginContainer/OutsideGridContainer/MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
value = 100.0
texture_under = ExtResource("11_7r5ae")
texture_over = ExtResource("12_f03hg")
texture_progress = ExtResource("13_1fafh")

[node name="RightEmptyMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/MidMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BotMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="GUILayer/MainGUIContainer/BotMarginContainer"]
layout_mode = 2
columns = 2

[node name="LeftMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/BotMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShieldCooldownLabel" type="Label" parent="GUILayer/MainGUIContainer/BotMarginContainer/GridContainer/LeftMarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("10_o8iod")
text = "SHIELD COOLDOWN: "

[node name="RightMarginContainer" type="MarginContainer" parent="GUILayer/MainGUIContainer/BotMarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndScene" parent="GUILayer" instance=ExtResource("6_itygd")]
visible = false
z_as_relative = false

[node name="PauseScene" parent="GUILayer" instance=ExtResource("11_dx34h")]
visible = false

[node name="VictoryScreen" parent="GUILayer" instance=ExtResource("12_iggr2")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_p2uwh")
volume_db = -15.0
autoplay = true
bus = &"Music"

[node name="AudioLowFuel" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_036r0")
volume_db = -15.0
bus = &"SFX"

[node name="AudioPickupWrench" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_fk81j")
volume_db = -3.0
bus = &"SFX"

[node name="AudioFuel" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_bi8ii")
volume_db = -15.0
bus = &"SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_viewport_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_viewport_area_exited"]
[connection signal="timeout" from="GUILayer/MainGUIContainer/TopMarginContainer/GridContainer/MidMarginContainer/NoFuelBlinkTimer" to="." method="no_fuel"]
